update:第一章更新

--- a/ch01_机器学习概览.ipynb
+++ b/ch01_机器学习概览.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n"
+    "## Exercises\n",
+    "\n",
+    "这章是概览性质的，所以我们直接以课后习题为主过一遍即可。\n"
    ]
   },
   {
