fix:save_fig 路径修改

--- a/ch02_端到端的机器学习项目.ipynb
+++ b/ch02_端到端的机器学习项目.ipynb
@@ -103,8 +103,9 @@
     "\n",
     "# Where to save the figures\n",
     "# 设定图片保存路径，这里写了一个函数，后面直接调用即可\n",
+    "PROJECT_DIR = os.path.dirname(os.path.abspath('__file__'))\n",
     "CHAPTER_ID = \"02_End_to_End_project\"\n",
-    "IMAGES_PATH = os.path.join(\"/images\", CHAPTER_ID)\n",
+    "IMAGES_PATH = os.path.join(PROJECT_DIR, \"images\", CHAPTER_ID)\n",
     "\n",
     "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
     "    path = os.path.join(IMAGES_PATH, fig_id + \".\" + fig_extension)\n",
