--- a/ch07_集成学习和随机森林.ipynb
+++ b/ch07_集成学习和随机森林.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Ensemble Learning and Random Forests-集合学习和随机森林\n"
+    "# 集成学习和随机森林 - Ensemble Learning and Random Forests\n"
    ]
   },
   {
