--- a/ch08_降维_Dimensionality_Reduction.ipynb
+++ b/ch08_降维_Dimensionality_Reduction.ipynb
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-28T12:09:26.814869Z",
-     "start_time": "2023-01-28T12:09:25.549583Z"
+     "end_time": "2023-01-30T00:31:49.344428Z",
+     "start_time": "2023-01-30T00:31:47.178087Z"
     }
    },
    "outputs": [],
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.2.2 Manifold Learning"
+    "### 流行学习 - Manifold Learning"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8.3 PCA"
+    "## 主成分分析 - PCA"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.1 Preserving the Variance"
+    "### 保留差异性 - Preserving the Variance"
    ]
   },
   {
@@ -281,6 +281,8 @@
     "* 点虚线上的投影保留了非常小的方差，（下面）\n",
     "* 点横虚线上的投影保留了中间量的方差。（中间）\n",
     "\n",
+    "cc：这个图个人感觉标错了，应该点线是最大方差。实线是最小方差。\n",
+    "\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -295,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.2 Principal Components"
+    "### 主要成分 - Principal Components"
    ]
   },
   {
@@ -352,8 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-30T00:31:57.283132Z",
+     "start_time": "2023-01-30T00:31:57.275050Z"
+    }
+   },
    "outputs": [],
    "source": [
     "np.random.seed(4)\n",
@@ -369,28 +376,137 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-30T00:32:59.328984Z",
+     "start_time": "2023-01-30T00:32:59.316650Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.01570027, -0.55091331, -0.26132626],\n",
+       "       [-0.00771675,  0.59958572,  0.03507755],\n",
+       "       [-0.95317135, -0.46453691, -0.24920288],\n",
+       "       [-0.92012304,  0.21009593,  0.02182381],\n",
+       "       [-0.76309739,  0.158261  ,  0.19152496],\n",
+       "       [ 1.11816122,  0.32508721,  0.31710572],\n",
+       "       [-1.02258878, -0.64384064, -0.13368695],\n",
+       "       [ 0.67351984, -0.27342519, -0.00787835],\n",
+       "       [ 1.01619558,  0.51546608,  0.46783297],\n",
+       "       [ 0.54957723,  0.67728016,  0.2340159 ],\n",
+       "       [-0.98960443,  0.00886617, -0.12152034],\n",
+       "       [ 1.13248106,  0.28229967,  0.06972972],\n",
+       "       [-0.99337712, -0.26832824, -0.15761101],\n",
+       "       [-0.94763679, -0.4995849 , -0.13927911],\n",
+       "       [ 1.10095709,  0.1706481 ,  0.09790432],\n",
+       "       [-0.34604591,  0.45334414,  0.06433843],\n",
+       "       [ 0.69102621, -0.27337761, -0.05926516],\n",
+       "       [ 0.68302902,  0.70421846,  0.24642318],\n",
+       "       [ 0.8774031 , -0.16775101, -0.02162333],\n",
+       "       [-1.06090127, -0.48213721, -0.38573526],\n",
+       "       [ 0.52336644,  0.66585845,  0.39019099],\n",
+       "       [-0.94419403, -0.61502157, -0.47610118],\n",
+       "       [-0.9716288 ,  0.00742468, -0.18764369],\n",
+       "       [-1.10560661, -0.31903307, -0.17189644],\n",
+       "       [ 1.1748694 ,  0.15718214,  0.26579776],\n",
+       "       [ 0.91337123, -0.1608149 ,  0.02223257],\n",
+       "       [-0.28688829,  0.56373778,  0.11210787],\n",
+       "       [ 1.10247263,  0.21024786,  0.17826927],\n",
+       "       [-0.93581594,  0.14433427, -0.07641252],\n",
+       "       [ 0.6617217 ,  0.7350669 ,  0.37436649],\n",
+       "       [ 0.09896169,  0.60619461,  0.14346668],\n",
+       "       [-1.08103158, -0.54686117, -0.37070336],\n",
+       "       [ 0.03004261,  0.60541538,  0.13736259],\n",
+       "       [ 0.97846627, -0.04833433,  0.09297312],\n",
+       "       [ 0.97257451,  0.15564902,  0.2668735 ],\n",
+       "       [-0.06924261,  0.57029162,  0.32415098],\n",
+       "       [ 0.01690169,  0.64656545,  0.15571838],\n",
+       "       [-0.40544483,  0.39226596, -0.06928305],\n",
+       "       [ 0.64162827,  0.68484229,  0.13122889],\n",
+       "       [-0.64012055,  0.41578899,  0.27325686],\n",
+       "       [ 0.7326402 ,  0.75604792,  0.25979142],\n",
+       "       [-0.44999735,  0.52952899,  0.15964958],\n",
+       "       [-0.98461065,  0.02344158,  0.1002999 ],\n",
+       "       [ 1.11939222,  0.24629838,  0.11781711],\n",
+       "       [ 0.78441066,  0.64312236,  0.25192037],\n",
+       "       [ 0.16636498,  0.71958358,  0.17445205],\n",
+       "       [-0.67371747,  0.3528853 , -0.07109776],\n",
+       "       [ 1.11429663,  0.41882472,  0.31705263],\n",
+       "       [-0.11381596,  0.6373893 ,  0.28640517],\n",
+       "       [-0.45471725,  0.43269163, -0.10303808],\n",
+       "       [-1.15790478, -0.39121007, -0.13498243],\n",
+       "       [ 0.83494104,  0.66412252,  0.25913415],\n",
+       "       [-0.46940298,  0.39639057,  0.0903395 ],\n",
+       "       [ 1.14845951,  0.31874645,  0.23025679],\n",
+       "       [ 0.24039921,  0.59890442,  0.07305738],\n",
+       "       [ 1.10567699,  0.21166076,  0.14297884],\n",
+       "       [-1.01152009, -0.449484  , -0.33508853],\n",
+       "       [ 0.52519411,  0.64730821,  0.43823703],\n",
+       "       [-1.09575714, -0.16906908,  0.05828838],\n",
+       "       [ 0.58692443,  0.62026757,  0.25317605]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**PCA using SVD decomposition**"
+    "**PCA using SVD decomposition** - PCA用SVD分解"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-30T00:38:58.294890Z",
+     "start_time": "2023-01-30T00:38:58.285998Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.93636116, 0.29854881, 0.18465208])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_centered = X-X.mean(axis=0)\n",
     "U,s,Vt = np.linalg.svd(X_centered)\n",
     "c1 = Vt.T[:,0]\n",
-    "c2 = Vt.T[:,1]"
+    "c2 = Vt.T[:,1]\n",
+    "\n",
+    "c1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-30T00:38:16.087887Z",
+     "start_time": "2023-01-30T00:38:16.075926Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -398,7 +514,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.3 Projecting Down to d Dimensions"
+    "### 向下投影到D维 - Projecting Down to d Dimensions"
    ]
   },
   {
@@ -478,7 +594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.4 Using Scikit-Learn"
+    "### 使用Scikit-Learn - Using Scikit-Learn"
    ]
   },
   {
@@ -762,7 +878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.5 Explained Variance Ratio"
+    "### 可解释方差比 - Explained Variance Ratio"
    ]
   },
   {
@@ -1371,7 +1487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.6 Choosing the Right Number of Dimensions"
+    "### 选择正确的维度 - Choosing the Right Number of Dimensions"
    ]
   },
   {
@@ -1429,7 +1545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.7 PCA for Compression"
+    "### PCA压缩 - PCA for Compression"
    ]
   },
   {
@@ -1653,7 +1769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.8 Incremental PCA"
+    "### 增量PCA - Incremental PCA"
    ]
   },
   {
@@ -1856,7 +1972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.3.9 Randomized PCA"
+    "### 随机PCA - Randomized PCA"
    ]
   },
   {
@@ -1880,7 +1996,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8.4 Kernel PCA"
+    "## 内核PCA - Kernel PCA"
    ]
   },
   {
@@ -2047,7 +2163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8.4.1 Selecting a Kernel and Tuning Hyperparameters"
+    "### 选择内核并调整超参数 - Selecting a Kernel and Tuning Hyperparameters"
    ]
   },
   {
@@ -2356,7 +2472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8.5 LLE"
+    "## 局部线性嵌入 - LLE"
    ]
   },
   {
@@ -2483,7 +2599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8.6 Other Dimensionality Reduction Techniques"
+    "## 其他降维技术 - Other Dimensionality Reduction Techniques"
    ]
   },
   {
