--- a/version1/09_Up and Running with TensorFlow.ipynb
+++ b/version1/09_Up and Running with TensorFlow.ipynb
@@ -68,49 +68,64 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-02T08:38:36.298465Z",
+     "start_time": "2023-03-02T08:38:35.494405Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# To support both python 2 and python 3\n",
-    "from __future__ import division, print_function, unicode_literals\n",
+    "# Python ≥3.5 is required\n",
+    "import sys\n",
+    "assert sys.version_info >= (3, 5)\n",
+    "\n",
+    "# Scikit-Learn ≥0.20 is required\n",
+    "import sklearn\n",
+    "assert sklearn.__version__ >= \"0.20\"\n",
+    "\n",
+    "try:\n",
+    "    # %tensorflow_version only exists in Colab.\n",
+    "    %tensorflow_version 2.x\n",
+    "except Exception:\n",
+    "    pass\n",
+    "\n",
+    "# TensorFlow ≥2.4 is required in this notebook\n",
+    "# Earlier 2.x versions will mostly work the same, but with a few bugs\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "assert tf.__version__ >= \"2.4\"\n",
     "\n",
     "# Common imports\n",
     "import numpy as np\n",
     "import os\n",
     "\n",
     "# to make this notebook's output stable across runs\n",
-    "def reset_graph(seed=42):\n",
-    "    tf.reset_default_graph()\n",
-    "    tf.set_random_seed(seed)\n",
-    "    np.random.seed(seed)\n",
+    "np.random.seed(42)\n",
+    "tf.random.set_seed(42)\n",
     "\n",
     "# To plot pretty figures\n",
     "%matplotlib inline\n",
-    "import matplotlib\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams['axes.labelsize'] = 14\n",
-    "plt.rcParams['xtick.labelsize'] = 12\n",
-    "plt.rcParams['ytick.labelsize'] = 12\n",
+    "mpl.rc('axes', labelsize=14)\n",
+    "mpl.rc('xtick', labelsize=12)\n",
+    "mpl.rc('ytick', labelsize=12)\n",
     "\n",
     "# Where to save the figures\n",
-    "PROJECT_ROOT_DIR = \"F:\\ML\\Machine learning\\Hands-on machine learning with scikit-learn and tensorflow\"\n",
+    "PROJECT_ROOT_DIR = os.path.dirname(os.path.abspath('__file__'))\n",
     "CHAPTER_ID = \"09_Up and Running with TensorFlow\"\n",
+    "IMAGES_PATH = os.path.join(PROJECT_ROOT_DIR, \"images\", CHAPTER_ID)\n",
+    "os.makedirs(IMAGES_PATH, exist_ok=True)\n",
     "\n",
-    "def save_fig(fig_id, tight_layout=True):\n",
-    "    path = os.path.join(PROJECT_ROOT_DIR, \"images\", CHAPTER_ID, fig_id + \".png\")\n",
+    "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
+    "    path = os.path.join(IMAGES_PATH, fig_id + \".\" + fig_extension)\n",
     "    print(\"Saving figure\", fig_id)\n",
     "    if tight_layout:\n",
     "        plt.tight_layout()\n",
-    "    plt.savefig(path, format='png', dpi=300)"
+    "    plt.savefig(path, format=fig_extension, dpi=resolution)"
    ]
   },
   {
@@ -143,8 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-02T08:31:34.758192Z",
+     "start_time": "2023-03-02T08:31:34.753801Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -3877,9 +3897,27 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.8.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "338px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
